2016-03-19  Araki Ken  <arakiken@users.sf.net>

	* registobmp/Makefile.in: Changeset 2562 commit (-lm is removed) is reverted.

	* ml_vt100_parser.c: "vt_color_mode" is added to OSC 5380 and 5381.

	* ml_color.[ch]: ml_get_color_mode() is added.

	* vte.c: Font size specified after font family in the 2nd argument of
	  vte_terminal_set_font_from_string() is applied to "fontsize" option.

	* version.h.in: 3.7.0 -> 3.7.0post

2016-03-13  Araki Ken  <arakiken@users.sf.net>

	* 3.7.0 released.
	  (tag "rel-3_7_0")

	* configure.in, mlterm.spec, main/version.h.in,
	  MLTermPty.c, android/jni/version.h:
	  updated for 3.7.0.

	* etc/main, etc/main.ja: Updated.

	* fb/x_color.c, fb/x_display.c: The type of the first argument of
	  x_cmap_get_closest_color() is reverted from u_int to u_long.

2016-03-12  Araki Ken  <arakiken@users.sf.net>

	* mlfc/main.c: 'mlfc -h' shows usage message.

	* MLTerm.java: The size of color palette is changed from 258 to 512.

	* MLTermPty.c: If a previous character is not converted to UTF-16,
	  NULL is passed to the 2nd argument of need_style().

	* ml_color.c: If current value is overwritten by specifying the same
	  value as the default rgb, color_config_set_rgb() erases the current one.

	* x_screen.c: Not only "USASCII" but also "US_ASCII" and "US-ASCII" are
	  available for {set|get}_font_config().

2016-03-11  Araki Ken  <arakiken@users.sf.net>

	* README.ja, man/mlterm.1: Updated.

	* ml_vt100_parser.c, x_main_config.c: "use_approximate_vt_color" is changed
	  to "vt_color_mode"

	* ml_color.c:
	  - 'threshold' is added to arguments of ml_get_closest_256_colors().
	  - ml_set_use_approximate_vt_color() -> ml_set_color_mode()

2016-03-11  Araki Ken  <arakiken@users.sf.net>

	* x_main_config.c: "use_approximate_vt_color" option is added.

	* fb/x_display.c: The performance of x_cmap_get_closest_color() is improved
	  by using ml_get_closest_256_color().

	* ml_color.c:
	  - ml_set_use_approximate_vt_color() is added.